--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,7 +6,7 @@ body{
 main{
     background-color: white;
     margin: 1em auto 3em auto;
-    width: 50%;
+    width: 800px;
     padding: 1em;
 }
 
