--- a/views/layouts/main_logo.handlebars
+++ b/views/layouts/main_logo.handlebars
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>CS602 Final Project</title>
+	<title>Review Stuff!</title>
 	<script src="/javascripts/clickActions.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
     {{{css}}}
