--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,7 @@ body{
     font-family: Verdana, sans-serif;
 }
 
-main{
+section{
     background-color: white;
     margin: 1em auto 3em auto;
     width: 800px;
