--- a/views/layouts/main_logo.handlebars
+++ b/views/layouts/main_logo.handlebars
@@ -7,7 +7,7 @@
     {{{css}}}
 </head>
 <body>
-    <main>
+    <section>
         <h1>Review Stuff!</h1>
         <hr>
         <p>
@@ -20,7 +20,7 @@
 
 
         {{{body}}}
-    </main>
+    </section>
 
 
 
